kubernetes/apps/base/media/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      nodeSelector:
        feature.node.kubernetes.io/pci-0300_8086.present: "true"
      containers:
      - name: plex
        image: lscr.io/linuxserver/plex:latest
        ports:
        - containerPort: 32400
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: tv
          mountPath: /tv
        - name: movies
          mountPath: /movies
        - name: dri
          mountPath: /dev/dri
        - name: transcode
          mountPath: /transcode
        resources:
          requests:
            memory: "8Gi"
            cpu: "1500m"
            gpu.intel.com/i915: "1"
          limits:
            # Increase memory limit to account for RAM transcode directory
            memory: "16Gi"
            cpu: "4000m"
            gpu.intel.com/i915: "1"
        securityContext:
          privileged: true
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: plex-config
      - name: tv
        nfs:
          server: 10.2.10.100
          path: /mnt/NAS-WIL/Media/media/tv
          readOnly: true
      - name: movies
        nfs:
          server: 10.2.10.100
          path: /mnt/NAS-WIL/Media/media/movies
          readOnly: true
      - name: dri
        hostPath:
          path: /dev/dri
          type: Directory
      - name: transcode
        emptyDir:
          medium: Memory
          sizeLimit: 4Gi
